@@ -251,9 +251,6 @@ class ModIRC(SingleServerIRCBot):
 				# Ignore all the other CTCPs
 				return
 
-		if body == "":
-			return
-
 		# WHOOHOOO!!
 		if target == self.settings.myname or source == self.settings.myname:
 			print "[%s] <%s> > %s> %s" % ( get_time(), source, target, body)
@@ -280,10 +277,14 @@ class ModIRC(SingleServerIRCBot):
 		url_message = re.match("http(s)*:\/\/", body[0:], re.IGNORECASE) 
 		if quoted_message and not body[0:2] == "<3" and not body[0:3] == "<.<":
 			return
-		if (not source in self.owners) and body[0:1] == "!":
-			return
 		if url_message:
 			return
+
+		# Stealth mode. Disables commands for non owners
+		if (not source in self.owners) and body[0:1] == "!":
+			if (not self.settings.stealth):
+				if self.irc_commands(body, source, target, c, e) == 1:return
+			else: return
 
 		# Always reply to private messages
 		if e.eventtype() == "privmsg":
@@ -298,6 +299,9 @@ class ModIRC(SingleServerIRCBot):
 				#for x in self.channels[target].users():
 				body = body.replace(self.settings.myname.lower(), "#nick")
 				body = body.replace(self.settings.myname, "#nick")
+
+		if body == "":
+			return
 
 		# Pass message onto pyborg
 		if source in self.owners and e.source() in self.owner_mask:
