@@ -45,3 +45,4 @@ Initial release
 * Fixed the the Capitalization bug by actually writing my own routine for it [pyborg.py, pyborg-irc.py & pyborg-im.py]
 * Moved the Capitilization code back into the core and made the regex code case-insensitive [pyborg.py, pyborg-irc.py & pyborg-im.py]
 * Fixed my bug caused by altering the unfilter function within the code [pyborg.py]
+* Fixed a potential bug and fixed stealth mode code [pyborg-irc.py & pyborg-im.py]
